<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">


    <TextView
        android:id="@+id/textDisplayin2"
        android:layout_width="279dp"
        android:layout_height="64dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/replyReceivedMainactivity2" />

    <TextView
        android:id="@+id/replyReceivedMainactivity2"
        android:layout_width="315dp"
        android:layout_height="75dp"
        android:layout_marginTop="36dp"
        android:text="@string/mainActivity2replyreceived"
        android:background="#8BC34A"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonReply"
        android:layout_width="110dp"
        android:layout_height="71dp"
        android:layout_marginBottom="100dp"
        android:text="@string/replybuttonmsg"
        android:onClick="reply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextMessage2"
        android:layout_width="201dp"
        android:layout_height="81dp"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:hint="@string/enterTextmainact2"
        android:inputType="textPersonName"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonReply"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>