<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/replyReceivedMainactivity"
        android:layout_width="336dp"
        android:layout_height="70dp"
        android:background="#8BC34A"
        android:gravity="center"
        android:text="@string/mainActivityreplyreceived"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="italic|bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:id="@+id/textDisplayin1"
        android:layout_width="279dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textStyle="italic|bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/replyReceivedMainactivity" />

    <Button
        android:id="@+id/Sendbutton"
        android:layout_width="82dp"
        android:layout_height="56dp"
        android:layout_marginBottom="120dp"
        android:onClick="send"
        android:text="@string/send_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextMessage1"
        android:layout_width="220dp"
        android:layout_height="56dp"
        android:layout_marginBottom="120dp"
        android:ems="10"
        android:hint="@string/EnterText1MainActivity"
        android:inputType="textPersonName"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Sendbutton"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>